--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "jscord-storage",
-  "version": "0.0.11",
-  "description": "Free unlimited file hosting using Discord server",
+  "version": "1.0.0",
+  "description": "Free unlimited file storage",
   "main": "src/index.js",
+  "type": "module",
   "repository": "https://github.com/animemoeus/jscord-storage",
   "homepage": "https://discord-storage.animemoe.us",
   "author": "Arter Tendean <arter.tendean.07@gmail.com>",
@@ -10,8 +11,7 @@
   "private": false,
   "dependencies": {
     "axios": "^1.0.0",
-    "form-data": "^4.0.0",
-    "validator": "^13.6.0"
+    "form-data": "^4.0.0"
   },
   "scripts": {}
 }
