--- a/package.json
+++ b/package.json
@@ -13,5 +13,18 @@
     "axios": "^1.0.0",
     "form-data": "^4.0.0"
   },
-  "scripts": {}
+  "scripts": {
+    "test": "npx jest"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
+    },
+    "testTimeout": 20000
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.22.10",
+    "babel-jest": "^29.6.4",
+    "jest": "^29.6.4"
+  }
 }
